Mon May 13 12:52:29 BST 2002  Olly Betts <olly@survex.com>

	* Autoconf 2.50.

	* Commented out omindex-config (since it's unfinished) and XML support
	  (since only omindex-config uses it).

Thu May 02 16:06:02 BST 2002  Olly Betts <olly@survex.com>

	* Updated to reflect removal of OmData.

Wed May 01 11:26:59 BST 2002  Olly Betts <olly@survex.com>

	* Changed to use queryparser in libomqueryparser.

Tue Apr 23 15:10:42 BST 2002  Olly Betts <olly@survex.com>

        * Make buildall smart enough to generate aclocal.m4 properly and
          remove acinclude.m4.  It now also extracts the package name from
          configure.in so we can use the same buildall everywhere; fixed
	  problem with double use of AM_CXXFLAGS in Makefile.am.

Tue Apr 23 14:27:29 BST 2002  Olly Betts <olly@survex.com>

	* Updated for xapian-config and xapian.m4 changes.

Thu Apr 18 14:37:05 BST 2002  Olly Betts <olly@survex.com>

	* Updated buildall; minor tweaks to configure.in.

Wed Apr 17 12:31:18 BST 2002  Olly Betts <olly@survex.com>

	* Removed references to xapian-config uninst options. 

Fri Apr 12 15:48:33 BST 2002  Olly Betts <olly@survex.com>

	* Remove parsequery.cc on "make maintainer-clean".

Fri Apr 12 16:19:19 BST 2002  Olly Betts <olly@survex.com>

	* Require automake 1.5.

Fri Apr 12 12:47:04 BST 2002  Olly Betts <olly@survex.com>

	* Tweaked what gets interpreted as a phrase.

Fri Apr 12 12:44:00 BST 2002  Olly Betts <olly@survex.com>

	* Fixed to use AM_CFLAGS and AM_CXXFLAGS.

Mon Apr 01 23:34:09 BST 2002 Olly Betts <olly@survex.com>

	* Fixed support for decimal numeric entities (e.g. "&#246;")

	* Added support for all iso-8859-1 named entities (e.g. "&ouml;")

Mon Apr 01 15:07:31 BST 2002 Olly Betts <olly@survex.com>

	* Applied patch from "orion orion" to fix problem in HTML parsing.

Mon Mar 25 13:11:14 GMT 2002  Olly Betts <olly@survex.com>

	* More tolerant treatment of random punctuation in query.

Mon Feb  4 14:57:36 GMT 2002  Sam Liddicott  <sam@ananova.com>
