@@ -1,3 +1,7 @@
+Tue May 14 11:16:03 BST 2002  Olly Betts <olly@survex.com>
+
+	* Added SORT and SORTBANDS.
+
 Mon May 13 12:52:29 BST 2002  Olly Betts <olly@survex.com>
 
 	* Autoconf 2.50.
